--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
 </head>
 <body>
     <script src="assets/scripts/phaser.min.js"></script>
-<script src="assets/scripts/phaser.js"></script>
-
-<script type="module" src="assets/scripts/menuScene.js"></script>
-<script type="module" src="assets/scripts/GameScene1.js"></script>
-<script type="module" src="assets/scripts/GameScene2.js"></script>
-<script type="module" src="assets/scripts/GameScene3.js"></script>
-<script type="module" src="assets/scripts/creditsScene.js"></script>
-<script type="module" src="assets/scripts/main.js"></script>
+    <script src="assets/scripts/phaser.js"></script>
+    <script src="assets/scripts/menuScene.js"></script>
+    <!-- <script src="assets/scripts/gameScene.js"></script> -->
+    <script src="assets/scripts/GameScene1.js"></script>
+    <script src="assets/scripts/GameScene2.js"></script>
+    <script src="assets/scripts/GameScene3.js"></script>
+    <script src="assets/scripts/WinScene.js"></script>
+    <script src="assets/scripts/creditsScene.js"></script>
+    <script src="assets/scripts/main.js"></script>
 </body>
 </html>
